--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "Home") %>
+<h1>Technoparty</h1>
+<p>Ain't no party like a technoparty!
+
+<a href= "www.modernizedesigns.com"> wongers! </a>
+</p>
