Finish layout & routes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,14 @@
+<div class="center jumbotron">
+  <h1>Ready the glitter cannons!</h1>
 
-<h1>Technoparty</h1>
-<p>Ain't no party like a technoparty!
+  <h2>
+    Ain't no party like a big gay party!
+    <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
+    Bang Bang!
+  </h2>
 
-<a href= "www.modernizedesigns.com"> wongers! </a>
-</p>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails logo"),
+            'http://rubyonrails.org/' %>
