--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
     <a href="http://www.railstutorial.org/">Technoparty</a>
-    by <a href="http://www.michaelhartl.com/">Wong-a-Thong</a>
+    by <a href="http://www.jenhartl.com/">Wong-a-Thong</a>
   </small>
   <nav>
     <ul>
