--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,9 +8,12 @@
         <%= render 'shared/micropost_form' %>
       </section>
     </aside>
+    <div class="col-md-8">
+      <h3>Micropost Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
   </div>
 <% else %>
-
 
 <div class="center jumbotron">
   <h1>Ready the glitter cannons!</h1>
